# cmake-template-repo

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
apps/: CMakeLists.txt
apps/hello/: CMakeLists.txt
apps/hello/src/: main.cpp
components/: CMakeLists.txt
components/example_component/: CMakeLists.txt
components/example_component/include/: example_component.h
components/example_component/src/: example_component.cpp
components/example_component/tests/: CMakeLists.txt  example_component_tests.cpp
